--- a/pml-project.Rmd
+++ b/pml-project.Rmd
@@ -1,10 +1,11 @@
 ---
 title: "Weight Lifting Exercise Analysis"
 author: "Christoph Fabianek"
-date: 'Sunday, August 23rd, 2015'
-output: 
+date: "Sunday, August 23rd, 2015"
+output:
   html_document:
-    keep_md: true
+    keep_md: yes
+  pdf_document: default
 ---
 
 ## Overview
@@ -103,7 +104,8 @@ To get an unbiased estimate of the model performance (*Random Forest* with 10-fo
 * The `confusionMatrix` states an **Accuracy of `r cm$overall["Accuracy"]*100`%**.  
 * The expected **Out-of-sample Error is `r (sum(predict(model, data_testing) != data_testing$classe)/length(data_testing$classe))*100`%**.
 
-Finally, the following figure shows the importance of the variables:
+Finally, the following figure shows the importance of the variables:  
+
 ```{r variable_importance, cache = TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 plot(varImp(model), main = "Importance of Top 20 Variables", xlab="Importance in %", top = 20)
 ```
@@ -111,6 +113,7 @@ plot(varImp(model), main = "Importance of Top 20 Variables", xlab="Importance in
 ## Conclusion
 The *Random Forest* algorithm with *Cross Validation* provides great results (high accuracy and low error rate) out of the box without much tweaking. It was interesting to experiment with various parameters for the used algorithms to improve performance on the local machine. Nevertheless, the overall best result was achieved with default settings.
 
+\pagebreak  
 
 ## Appendix
 
